nikx-compiler/src/ts/generated/NikxParser.ts
// Generated from antlr/Nikx.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import NikxListener from "./NikxListener.js";
import NikxVisitor from "./NikxVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class NikxParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly BOX = 3;
	public static readonly FUN = 4;
	public static readonly BooleanLiteral = 5;
	public static readonly NumberLiteral = 6;
	public static readonly StringLiteral = 7;
	public static readonly Identifier = 8;
	public static readonly SEMICOLON = 9;
	public static readonly COMMA = 10;
	public static readonly ASSIGN = 11;
	public static readonly LPAREN = 12;
	public static readonly RPAREN = 13;
	public static readonly LBRACE = 14;
	public static readonly RBRACE = 15;
	public static readonly LT = 16;
	public static readonly GT = 17;
	public static readonly SLASH = 18;
	public static readonly WS = 19;
	public static readonly COMMENT = 20;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_program = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_variableDeclaration = 2;
	public static readonly RULE_functionDeclaration = 3;
	public static readonly RULE_parameterList = 4;
	public static readonly RULE_block = 5;
	public static readonly RULE_expressionStatement = 6;
	public static readonly RULE_functionCall = 7;
	public static readonly RULE_argumentList = 8;
	public static readonly RULE_literal = 9;
	public static readonly RULE_htmlElement = 10;
	public static readonly RULE_htmlNormalElement = 11;
	public static readonly RULE_htmlSelfClosingElement = 12;
	public static readonly RULE_htmlContent = 13;
	public static readonly literalNames: (string | null)[] = [ null, "'</'", 
                                                            "'/>'", "'box'", 
                                                            "'fun'", null, 
                                                            null, null, 
                                                            null, "';'", 
                                                            "','", "'='", 
                                                            "'('", "')'", 
                                                            "'{'", "'}'", 
                                                            "'<'", "'>'", 
                                                            "'/'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, "BOX", 
                                                             "FUN", "BooleanLiteral", 
                                                             "NumberLiteral", 
                                                             "StringLiteral", 
                                                             "Identifier", 
                                                             "SEMICOLON", 
                                                             "COMMA", "ASSIGN", 
                                                             "LPAREN", "RPAREN", 
                                                             "LBRACE", "RBRACE", 
                                                             "LT", "GT", 
                                                             "SLASH", "WS", 
                                                             "COMMENT" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "statement", "variableDeclaration", "functionDeclaration", 
		"parameterList", "block", "expressionStatement", "functionCall", "argumentList", 
		"literal", "htmlElement", "htmlNormalElement", "htmlSelfClosingElement", 
		"htmlContent",
	];
	public get grammarFileName(): string { return "Nikx.g4"; }
	public get literalNames(): (string | null)[] { return NikxParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return NikxParser.symbolicNames; }
	public get ruleNames(): string[] { return NikxParser.ruleNames; }
	public get serializedATN(): number[] { return NikxParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, NikxParser._ATN, NikxParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let localctx: ProgramContext = new ProgramContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, NikxParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 31;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 66328) !== 0)) {
				{
				{
				this.state = 28;
				this.statement();
				}
				}
				this.state = 33;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 34;
			this.match(NikxParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, NikxParser.RULE_statement);
		try {
			this.state = 41;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 3:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 36;
				this.variableDeclaration();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 37;
				this.functionDeclaration();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 38;
				this.expressionStatement();
				}
				break;
			case 16:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 39;
				this.htmlElement();
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 40;
				this.match(NikxParser.SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public variableDeclaration(): VariableDeclarationContext {
		let localctx: VariableDeclarationContext = new VariableDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, NikxParser.RULE_variableDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 43;
			this.match(NikxParser.BOX);
			this.state = 44;
			this.match(NikxParser.Identifier);
			this.state = 47;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===11) {
				{
				this.state = 45;
				this.match(NikxParser.ASSIGN);
				this.state = 46;
				this.literal();
				}
			}

			this.state = 49;
			this.match(NikxParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public functionDeclaration(): FunctionDeclarationContext {
		let localctx: FunctionDeclarationContext = new FunctionDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, NikxParser.RULE_functionDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 51;
			this.match(NikxParser.FUN);
			this.state = 52;
			this.match(NikxParser.Identifier);
			this.state = 53;
			this.match(NikxParser.LPAREN);
			this.state = 55;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===8) {
				{
				this.state = 54;
				this.parameterList();
				}
			}

			this.state = 57;
			this.match(NikxParser.RPAREN);
			this.state = 58;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public parameterList(): ParameterListContext {
		let localctx: ParameterListContext = new ParameterListContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, NikxParser.RULE_parameterList);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 60;
			this.match(NikxParser.Identifier);
			this.state = 65;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===10) {
				{
				{
				this.state = 61;
				this.match(NikxParser.COMMA);
				this.state = 62;
				this.match(NikxParser.Identifier);
				}
				}
				this.state = 67;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let localctx: BlockContext = new BlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, NikxParser.RULE_block);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 68;
			this.match(NikxParser.LBRACE);
			this.state = 72;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 66328) !== 0)) {
				{
				{
				this.state = 69;
				this.statement();
				}
				}
				this.state = 74;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 75;
			this.match(NikxParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expressionStatement(): ExpressionStatementContext {
		let localctx: ExpressionStatementContext = new ExpressionStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, NikxParser.RULE_expressionStatement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 77;
			this.functionCall();
			this.state = 78;
			this.match(NikxParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public functionCall(): FunctionCallContext {
		let localctx: FunctionCallContext = new FunctionCallContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, NikxParser.RULE_functionCall);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 80;
			this.match(NikxParser.Identifier);
			this.state = 81;
			this.match(NikxParser.LPAREN);
			this.state = 83;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 224) !== 0)) {
				{
				this.state = 82;
				this.argumentList();
				}
			}

			this.state = 85;
			this.match(NikxParser.RPAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public argumentList(): ArgumentListContext {
		let localctx: ArgumentListContext = new ArgumentListContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, NikxParser.RULE_argumentList);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 87;
			this.literal();
			this.state = 92;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===10) {
				{
				{
				this.state = 88;
				this.match(NikxParser.COMMA);
				this.state = 89;
				this.literal();
				}
				}
				this.state = 94;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public literal(): LiteralContext {
		let localctx: LiteralContext = new LiteralContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, NikxParser.RULE_literal);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 95;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 224) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public htmlElement(): HtmlElementContext {
		let localctx: HtmlElementContext = new HtmlElementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, NikxParser.RULE_htmlElement);
		try {
			this.state = 99;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 97;
				this.htmlSelfClosingElement();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 98;
				this.htmlNormalElement();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public htmlNormalElement(): HtmlNormalElementContext {
		let localctx: HtmlNormalElementContext = new HtmlNormalElementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, NikxParser.RULE_htmlNormalElement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 101;
			this.match(NikxParser.LT);
			this.state = 102;
			this.match(NikxParser.Identifier);
			this.state = 103;
			this.match(NikxParser.GT);
			this.state = 107;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===7 || _la===16) {
				{
				{
				this.state = 104;
				this.htmlContent();
				}
				}
				this.state = 109;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 110;
			this.match(NikxParser.T__0);
			this.state = 111;
			this.match(NikxParser.Identifier);
			this.state = 112;
			this.match(NikxParser.GT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public htmlSelfClosingElement(): HtmlSelfClosingElementContext {
		let localctx: HtmlSelfClosingElementContext = new HtmlSelfClosingElementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, NikxParser.RULE_htmlSelfClosingElement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 114;
			this.match(NikxParser.LT);
			this.state = 115;
			this.match(NikxParser.Identifier);
			this.state = 116;
			this.match(NikxParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public htmlContent(): HtmlContentContext {
		let localctx: HtmlContentContext = new HtmlContentContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, NikxParser.RULE_htmlContent);
		try {
			this.state = 120;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 16:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 118;
				this.htmlElement();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 119;
				this.match(NikxParser.StringLiteral);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!NikxParser.__ATN) {
			NikxParser.__ATN = new ATNDeserializer().deserialize(NikxParser._serializedATN);
		}

		return NikxParser.__ATN;
	}


	static DecisionsToDFA = NikxParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class ProgramContext extends ParserRuleContext {
	constructor(parser?: NikxParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public EOF(): TerminalNode {
		return this.getToken(NikxParser.EOF, 0);
	}
	public statement_list(): StatementContext[] {
		return this.getTypedRuleContexts(StatementContext) as StatementContext[];
	}
	public statement(i: number): StatementContext {
		return this.getTypedRuleContext(StatementContext, i) as StatementContext;
	}
    public get ruleIndex(): number {
    	return NikxParser.RULE_program;
	}
	public enterRule(listener: NikxListener): void {
	    if(listener.enterProgram) {
	 		listener.enterProgram(this);
		}
	}
	public exitRule(listener: NikxListener): void {
	    if(listener.exitProgram) {
	 		listener.exitProgram(this);
		}
	}
	// @Override
	public accept<Result>(visitor: NikxVisitor<Result>): Result {
		if (visitor.visitProgram) {
			return visitor.visitProgram(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class StatementContext extends ParserRuleContext {
	constructor(parser?: NikxParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public variableDeclaration(): VariableDeclarationContext {
		return this.getTypedRuleContext(VariableDeclarationContext, 0) as VariableDeclarationContext;
	}
	public functionDeclaration(): FunctionDeclarationContext {
		return this.getTypedRuleContext(FunctionDeclarationContext, 0) as FunctionDeclarationContext;
	}
	public expressionStatement(): ExpressionStatementContext {
		return this.getTypedRuleContext(ExpressionStatementContext, 0) as ExpressionStatementContext;
	}
	public htmlElement(): HtmlElementContext {
		return this.getTypedRuleContext(HtmlElementContext, 0) as HtmlElementContext;
	}
	public SEMICOLON(): TerminalNode {
		return this.getToken(NikxParser.SEMICOLON, 0);
	}
    public get ruleIndex(): number {
    	return NikxParser.RULE_statement;
	}
	public enterRule(listener: NikxListener): void {
	    if(listener.enterStatement) {
	 		listener.enterStatement(this);
		}
	}
	public exitRule(listener: NikxListener): void {
	    if(listener.exitStatement) {
	 		listener.exitStatement(this);
		}
	}
	// @Override
	public accept<Result>(visitor: NikxVisitor<Result>): Result {
		if (visitor.visitStatement) {
			return visitor.visitStatement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class VariableDeclarationContext extends ParserRuleContext {
	constructor(parser?: NikxParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public BOX(): TerminalNode {
		return this.getToken(NikxParser.BOX, 0);
	}
	public Identifier(): TerminalNode {
		return this.getToken(NikxParser.Identifier, 0);
	}
	public SEMICOLON(): TerminalNode {
		return this.getToken(NikxParser.SEMICOLON, 0);
	}
	public ASSIGN(): TerminalNode {
		return this.getToken(NikxParser.ASSIGN, 0);
	}
	public literal(): LiteralContext {
		return this.getTypedRuleContext(LiteralContext, 0) as LiteralContext;
	}
    public get ruleIndex(): number {
    	return NikxParser.RULE_variableDeclaration;
	}
	public enterRule(listener: NikxListener): void {
	    if(listener.enterVariableDeclaration) {
	 		listener.enterVariableDeclaration(this);
		}
	}
	public exitRule(listener: NikxListener): void {
	    if(listener.exitVariableDeclaration) {
	 		listener.exitVariableDeclaration(this);
		}
	}
	// @Override
	public accept<Result>(visitor: NikxVisitor<Result>): Result {
		if (visitor.visitVariableDeclaration) {
			return visitor.visitVariableDeclaration(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FunctionDeclarationContext extends ParserRuleContext {
	constructor(parser?: NikxParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public FUN(): TerminalNode {
		return this.getToken(NikxParser.FUN, 0);
	}
	public Identifier(): TerminalNode {
		return this.getToken(NikxParser.Identifier, 0);
	}
	public LPAREN(): TerminalNode {
		return this.getToken(NikxParser.LPAREN, 0);
	}
	public RPAREN(): TerminalNode {
		return this.getToken(NikxParser.RPAREN, 0);
	}
	public block(): BlockContext {
		return this.getTypedRuleContext(BlockContext, 0) as BlockContext;
	}
	public parameterList(): ParameterListContext {
		return this.getTypedRuleContext(ParameterListContext, 0) as ParameterListContext;
	}
    public get ruleIndex(): number {
    	return NikxParser.RULE_functionDeclaration;
	}
	public enterRule(listener: NikxListener): void {
	    if(listener.enterFunctionDeclaration) {
	 		listener.enterFunctionDeclaration(this);
		}
	}
	public exitRule(listener: NikxListener): void {
	    if(listener.exitFunctionDeclaration) {
	 		listener.exitFunctionDeclaration(this);
		}
	}
	// @Override
	public accept<Result>(visitor: NikxVisitor<Result>): Result {
		if (visitor.visitFunctionDeclaration) {
			return visitor.visitFunctionDeclaration(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ParameterListContext extends ParserRuleContext {
	constructor(parser?: NikxParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public Identifier_list(): TerminalNode[] {
	    	return this.getTokens(NikxParser.Identifier);
	}
	public Identifier(i: number): TerminalNode {
		return this.getToken(NikxParser.Identifier, i);
	}
	public COMMA_list(): TerminalNode[] {
	    	return this.getTokens(NikxParser.COMMA);
	}
	public COMMA(i: number): TerminalNode {
		return this.getToken(NikxParser.COMMA, i);
	}
    public get ruleIndex(): number {
    	return NikxParser.RULE_parameterList;
	}
	public enterRule(listener: NikxListener): void {
	    if(listener.enterParameterList) {
	 		listener.enterParameterList(this);
		}
	}
	public exitRule(listener: NikxListener): void {
	    if(listener.exitParameterList) {
	 		listener.exitParameterList(this);
		}
	}
	// @Override
	public accept<Result>(visitor: NikxVisitor<Result>): Result {
		if (visitor.visitParameterList) {
			return visitor.visitParameterList(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class BlockContext extends ParserRuleContext {
	constructor(parser?: NikxParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public LBRACE(): TerminalNode {
		return this.getToken(NikxParser.LBRACE, 0);
	}
	public RBRACE(): TerminalNode {
		return this.getToken(NikxParser.RBRACE, 0);
	}
	public statement_list(): StatementContext[] {
		return this.getTypedRuleContexts(StatementContext) as StatementContext[];
	}
	public statement(i: number): StatementContext {
		return this.getTypedRuleContext(StatementContext, i) as StatementContext;
	}
    public get ruleIndex(): number {
    	return NikxParser.RULE_block;
	}
	public enterRule(listener: NikxListener): void {
	    if(listener.enterBlock) {
	 		listener.enterBlock(this);
		}
	}
	public exitRule(listener: NikxListener): void {
	    if(listener.exitBlock) {
	 		listener.exitBlock(this);
		}
	}
	// @Override
	public accept<Result>(visitor: NikxVisitor<Result>): Result {
		if (visitor.visitBlock) {
			return visitor.visitBlock(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ExpressionStatementContext extends ParserRuleContext {
	constructor(parser?: NikxParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public functionCall(): FunctionCallContext {
		return this.getTypedRuleContext(FunctionCallContext, 0) as FunctionCallContext;
	}
	public SEMICOLON(): TerminalNode {
		return this.getToken(NikxParser.SEMICOLON, 0);
	}
    public get ruleIndex(): number {
    	return NikxParser.RULE_expressionStatement;
	}
	public enterRule(listener: NikxListener): void {
	    if(listener.enterExpressionStatement) {
	 		listener.enterExpressionStatement(this);
		}
	}
	public exitRule(listener: NikxListener): void {
	    if(listener.exitExpressionStatement) {
	 		listener.exitExpressionStatement(this);
		}
	}
	// @Override
	public accept<Result>(visitor: NikxVisitor<Result>): Result {
		if (visitor.visitExpressionStatement) {
			return visitor.visitExpressionStatement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FunctionCallContext extends ParserRuleContext {
	constructor(parser?: NikxParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public Identifier(): TerminalNode {
		return this.getToken(NikxParser.Identifier, 0);
	}
	public LPAREN(): TerminalNode {
		return this.getToken(NikxParser.LPAREN, 0);
	}
	public RPAREN(): TerminalNode {
		return this.getToken(NikxParser.RPAREN, 0);
	}
	public argumentList(): ArgumentListContext {
		return this.getTypedRuleContext(ArgumentListContext, 0) as ArgumentListContext;
	}
    public get ruleIndex(): number {
    	return NikxParser.RULE_functionCall;
	}
	public enterRule(listener: NikxListener): void {
	    if(listener.enterFunctionCall) {
	 		listener.enterFunctionCall(this);
		}
	}
	public exitRule(listener: NikxListener): void {
	    if(listener.exitFunctionCall) {
	 		listener.exitFunctionCall(this);
		}
	}
	// @Override
	public accept<Result>(visitor: NikxVisitor<Result>): Result {
		if (visitor.visitFunctionCall) {
			return visitor.visitFunctionCall(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ArgumentListContext extends ParserRuleContext {
	constructor(parser?: NikxParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public literal_list(): LiteralContext[] {
		return this.getTypedRuleContexts(LiteralContext) as LiteralContext[];
	}
	public literal(i: number): LiteralContext {
		return this.getTypedRuleContext(LiteralContext, i) as LiteralContext;
	}
	public COMMA_list(): TerminalNode[] {
	    	return this.getTokens(NikxParser.COMMA);
	}
	public COMMA(i: number): TerminalNode {
		return this.getToken(NikxParser.COMMA, i);
	}
    public get ruleIndex(): number {
    	return NikxParser.RULE_argumentList;
	}
	public enterRule(listener: NikxListener): void {
	    if(listener.enterArgumentList) {
	 		listener.enterArgumentList(this);
		}
	}
	public exitRule(listener: NikxListener): void {
	    if(listener.exitArgumentList) {
	 		listener.exitArgumentList(this);
		}
	}
	// @Override
	public accept<Result>(visitor: NikxVisitor<Result>): Result {
		if (visitor.visitArgumentList) {
			return visitor.visitArgumentList(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class LiteralContext extends ParserRuleContext {
	constructor(parser?: NikxParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public NumberLiteral(): TerminalNode {
		return this.getToken(NikxParser.NumberLiteral, 0);
	}
	public StringLiteral(): TerminalNode {
		return this.getToken(NikxParser.StringLiteral, 0);
	}
	public BooleanLiteral(): TerminalNode {
		return this.getToken(NikxParser.BooleanLiteral, 0);
	}
    public get ruleIndex(): number {
    	return NikxParser.RULE_literal;
	}
	public enterRule(listener: NikxListener): void {
	    if(listener.enterLiteral) {
	 		listener.enterLiteral(this);
		}
	}
	public exitRule(listener: NikxListener): void {
	    if(listener.exitLiteral) {
	 		listener.exitLiteral(this);
		}
	}
	// @Override
	public accept<Result>(visitor: NikxVisitor<Result>): Result {
		if (visitor.visitLiteral) {
			return visitor.visitLiteral(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class HtmlElementContext extends ParserRuleContext {
	constructor(parser?: NikxParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public htmlSelfClosingElement(): HtmlSelfClosingElementContext {
		return this.getTypedRuleContext(HtmlSelfClosingElementContext, 0) as HtmlSelfClosingElementContext;
	}
	public htmlNormalElement(): HtmlNormalElementContext {
		return this.getTypedRuleContext(HtmlNormalElementContext, 0) as HtmlNormalElementContext;
	}
    public get ruleIndex(): number {
    	return NikxParser.RULE_htmlElement;
	}
	public enterRule(listener: NikxListener): void {
	    if(listener.enterHtmlElement) {
	 		listener.enterHtmlElement(this);
		}
	}
	public exitRule(listener: NikxListener): void {
	    if(listener.exitHtmlElement) {
	 		listener.exitHtmlElement(this);
		}
	}
	// @Override
	public accept<Result>(visitor: NikxVisitor<Result>): Result {
		if (visitor.visitHtmlElement) {
			return visitor.visitHtmlElement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

